# gcn-starter

./: .gitignore  README.md  config.py  logger.py  main.py  pyproject.toml  test_gcn.py
.clinerules/: overview.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
