[project]
name = "gcn-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.9.1",
    "torch>=2.1.0",
    "torch-geometric>=2.6.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:An issue occurred while importing 'torch-scatter':UserWarning",
    "ignore:An issue occurred while importing 'torch-sparse':UserWarning",
]
